refactor: replace get() with getFirst() for improved clarity in card selection